--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/cli": "^7.18.6",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "core-js": "^3.36.0",
     "d3": "^7.8.5",
     "express": "^4.16.4",
     "json-server": "^0.17.0",
@@ -44,8 +45,10 @@
     "path": "^0.12.7",
     "postcss-loader": "^8.1.0",
     "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
     "react-table": "^7.8.0",
-    "style-loader": "^0.23.1"
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
@@ -57,7 +60,9 @@
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.0",
     "nodemon": "^2.0.18",
+    "sass": "^1.71.0",
     "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
     "webpack": "^5.90.3",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^5.0.2"
