--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "node": "~14"
   },
   "scripts": {
-    "start": "webpack && react-scripts start",
-    "build": "webpack && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "webpack && node -r babel-register index.js",
+    "dev": "nodemon --exec 'node -r @babel/register index.js'",
     "watch": "webpack --watch --mode development",
-    "dev": "nodemon --exec 'node -r @babel/register' index.js",
+    "start": "node -r @babel/register index.js",
     "start-api": "json-server ./api.js",
-    "delay-api": "json-server ./api.js --delay 10000"
+    "delay-api": "json-server ./api.js --delay 10000",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -26,49 +25,37 @@
     "url": "https://github.com/Julien-Decoen/rest-api-test/issues"
   },
   "homepage": "https://github.com/Julien-Decoen/rest-api-test#readme",
-  "babel": {
-    "presets": [
-      "@babel/preset-env",
-      "@babel/preset-react"
-    ]
-  },
   "dependencies": {
     "@babel/cli": "^7.18.6",
-    "axios": "^1.6.7",
-    "chart.js": "^4.4.1",
-    "core-js": "^3.36.0",
-    "d3": "^7.8.5",
+    "@popperjs/core": "^2.11.8",
+    "babel-loader": "^8.2.3",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^5.3.2",
     "express": "^4.16.4",
     "json-server": "^0.17.0",
+    "json5": "^2.2.3",
+    "mini-css-extract-plugin": "^2.6.0",
     "node-sass": "^9.0.0",
     "nunjucks": "^3.1.3",
-    "path": "^0.12.7",
-    "postcss-loader": "^8.1.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "react-table": "^7.8.0",
-    "regenerator-runtime": "^0.14.1"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
     "@babel/register": "^7.23.7",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.10.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.8.0",
-    "nodemon": "^2.0.18",
-    "sass": "^1.71.0",
-    "sass-loader": "^14.1.1",
-    "style-loader": "^3.3.4",
-    "webpack": "^5.90.3",
+    "autoprefixer": "^10.4.16",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.5.4",
+    "nodemon": "^3.0.2",
+    "postcss-loader": "^7.3.3",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^0.23.1",
+    "webpack": "^5.89.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^5.0.2"
+    "webpack-dev-server": "^4.15.1"
   },
   "nodemonConfig": {
-    "dev": "nodemon -r @babel/register index.js",
     "restartable": "rs",
     "ignore": [
       ".git/*",
@@ -77,7 +64,7 @@
     ],
     "verbose": true,
     "execMap": {
-      "js": "node -r @babel/register"
+      "js": "node -r babel-register index.js"
     },
     "events": {
       "restart": "osascript -e 'display notification \"App restarted due to:\n'$FILENAME'\" with title \"nodemon\"'"
